k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: django-blog-app
    app.kubernetes.io/instance: django-blog-app-instance
    app.kubernetes.io/name: django-blog-app
  name: django-blog-app
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/instance: django-blog-app-instance
    app.kubernetes.io/name: django-blog-app
  sessionAffinity: None
  type: ClusterIP
